test/asm/should-fail/001-segfault-li-comma-end.asm
; Test for bug previously found with scan-build. Important: no CR/LF at EOF
ldi $1, 